--- a/index.html
+++ b/index.html
@@ -1,119 +1,100 @@
 <!DOCTYPE html>
-	<head>
-		<title>Josh's Portfolio</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.2/jspdf.debug.js"></script>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Josh Macaraig - Low Code Developer</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
+</head>
+<body class="bg-gray-100">
+    <nav class="bg-white shadow-lg">
+        <div class="max-w-6xl mx-auto px-4">
+            <div class="flex justify-between">
+                <div class="flex space-x-7">
+                    <div class="flex items-center py-4">
+                        <span class="font-semibold text-gray-500 text-lg">Josh Macaraig</span>
+                    </div>
+                </div>
+                <div class="flex items-center space-x-3">
+                    <a href="#" class="py-2 px-2 text-gray-500 hover:text-gray-900">Projects</a>
+                    <a href="#" class="py-2 px-2 text-gray-500 hover:text-gray-900">Skills</a>
+                    <a href="#" class="py-2 px-2 text-gray-500 hover:text-gray-900">Contact</a>
+                </div>
+            </div>
+        </div>
+    </nav>
 
-	</head>
-	<body class="is-preload">
+    <main class="max-w-6xl mx-auto px-4 py-8">
+        <!-- Hero Section -->
+        <section class="text-center py-20">
+            <h1 class="text-4xl font-bold text-gray-800 mb-4">Low-Code Developer & Solution Architect</h1>
+            <p class="text-xl text-gray-600">Specializing in Xano, Webflow, and No-Code Solutions</p>
+        </section>
 
-		<!-- Header -->
-			<header id="header">
-				<div class="content">
-					<h1>< Hello/></h1>
-					<h1>I'm Josh,</h1>
-					<p>I am a self taught software developer<br />
-					<ul class="actions">
-						<li><a href="#three" class="button primary icon solid fa-user-tie scrolly">About Me</a></li>
-						<li><a href="#one" class="button icon solid fa-chevron-down scrolly">My Works</a></li>
-					</ul>
-				</div>
+        <!-- Skills Section -->
+        <section class="py-12">
+            <h2 class="text-3xl font-bold text-gray-800 mb-8">Skills</h2>
+            <div class="grid grid-cols-2 md:grid-cols-3 gap-6">
+                <div class="bg-white p-6 rounded-lg shadow-md">
+                    <h3 class="font-semibold mb-2">Xano</h3>
+                    <p class="text-gray-600">Backend Development & API Design</p>
+                </div>
+                <div class="bg-white p-6 rounded-lg shadow-md">
+                    <h3 class="font-semibold mb-2">Webflow</h3>
+                    <p class="text-gray-600">Frontend Development & CMS</p>
+                </div>
+                <div class="bg-white p-6 rounded-lg shadow-md">
+                    <h3 class="font-semibold mb-2">Weweb</h3>
+                    <p class="text-gray-600">Web Application Development</p>
+                </div>
+                <div class="bg-white p-6 rounded-lg shadow-md">
+                    <h3 class="font-semibold mb-2">Wized</h3>
+                    <p class="text-gray-600">Logic & Interactions</p>
+                </div>
+                <div class="bg-white p-6 rounded-lg shadow-md">
+                    <h3 class="font-semibold mb-2">Knack</h3>
+                    <p class="text-gray-600">Database Applications</p>
+                </div>
+                <div class="bg-white p-6 rounded-lg shadow-md">
+                    <h3 class="font-semibold mb-2">Make (Integromat)</h3>
+                    <p class="text-gray-600">Automation & Integration</p>
+                </div>
+            </div>
+        </section>
 
-			</header>
+        <!-- Projects Section -->
+        <section class="py-12">
+            <h2 class="text-3xl font-bold text-gray-800 mb-8">Featured Projects</h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+                <!-- Add your project cards here -->
+                <div class="bg-white rounded-lg shadow-md overflow-hidden">
+                    <img src="/api/placeholder/600/400" alt="Project 1" class="w-full h-48 object-cover">
+                    <div class="p-6">
+                        <h3 class="font-bold text-xl mb-2">Project Title</h3>
+                        <p class="text-gray-600 mb-4">Description of the project and the technologies used.</p>
+                        <div class="flex gap-2">
+                            <span class="px-3 py-1 bg-gray-200 rounded-full text-sm">Xano</span>
+                            <span class="px-3 py-1 bg-gray-200 rounded-full text-sm">Webflow</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-		<!-- One -->
-			<section id="one" class="wrapper style2 special">
-				<header class="major">
-					<h2>Sed ipsum magna lorem tempus amet<br />
-					vehicula et gravida elementum</h2>
-				</header>
-				<ul class="icons major">
-					<li><span class="icon solid fa-camera-retro"><span class="label">Shoot</span></span></li>
-					<li><span class="icon solid fa-sync"><span class="label">Process</span></span></li>
-					<li><span class="icon solid fa-cloud"><span class="label">Upload</span></span></li>
-				</ul>
-			</section>
+        <!-- Contact Section -->
+        <section class="py-12">
+            <h2 class="text-3xl font-bold text-gray-800 mb-8">Contact</h2>
+            <div class="bg-white p-8 rounded-lg shadow-md">
+                <p class="text-gray-600 mb-4">Looking for a low-code developer? Let's connect!</p>
+                <a href="mailto:your@email.com" class="inline-block bg-blue-500 text-white px-6 py-3 rounded-lg hover:bg-blue-600">Get in Touch</a>
+            </div>
+        </section>
+    </main>
 
-		<!-- Two -->
-			<section id="two" class="wrapper">
-				<div class="inner alt">
-					<section class="spotlight">
-						<div class="image"><img src="images/pic01.jpg" alt="" /></div>
-						<div class="content">
-							<h3>Magna sed ultrices</h3>
-							<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
-						</div>
-					</section>
-					<section class="spotlight">
-						<div class="image"><img src="images/pic02.jpg" alt="" /></div>
-						<div class="content">
-							<h3>Ultrices nullam aliquam</h3>
-							<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
-						</div>
-					</section>
-					<section class="spotlight">
-						<div class="image"><img src="images/pic03.jpg" alt="" /></div>
-						<div class="content">
-							<h3>Aliquam sed magna</h3>
-							<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
-						</div>
-					</section>
-					<section class="special">
-						<ul class="icons labeled">
-							<li><span class="icon solid fa-camera-retro"><span class="label">Ipsum lorem accumsan</span></span></li>
-							<li><span class="icon solid fa-sync"><span class="label">Sed vehicula elementum</span></span></li>
-							<li><span class="icon solid fa-cloud"><span class="label">Elit fusce consequat</span></span></li>
-							<li><span class="icon solid fa-code"><span class="label">Lorem nullam tempus</span></span></li>
-							<li><span class="icon solid fa-desktop"><span class="label">Adipiscing amet sapien</span></span></li>
-						</ul>
-					</section>
-				</div>
-			</section>
-
-		<!-- Three -->
-			<section id="three" class="wrapper style2 special">
-				<header class="major">
-					<h2>Magna leo sapien gravida</h2>
-					<p>Gravida at leo elementum elit fusce accumsan dui libero, quis vehicula<br />
-					lectus ultricies eu. In convallis amet leo sapien iaculis efficitur.</p>
-				</header>
-				<ul class="actions special">
-					<li><a onclick="generatePDF()" target="_blank" class="button">Learn More</a></li>
-				</ul>
-			</section>
-
-		<!-- Footer -->
-			<footer id="footer">
-				<ul class="icons">
-					<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-				</ul>
-				<p class="copyright">&copy; Untitled. Credits: <a href="http://html5up.net">HTML5 UP</a></p>
-			</footer>
-
-		<!-- Scripts -->
-			<script>
-				function generatePDF(){
-					var doc = new jsPDF();
-
-					doc.text(20, 20, 'HELLO, WORLD!');
-					doc.text(20, 20, 'HELLO, WORLD!HELLO, WORLD!HELLO, WORLD!HELLO, WORLD!HELLO, WORLD!');
-
-					doc.save('document.pdf');
-				}
-			</script>
-
-
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
-</html> 
+    <footer class="bg-gray-800 text-white py-8">
+        <div class="max-w-6xl mx-auto px-4 text-center">
+            <p>&copy; 2024 Josh Macaraig. All rights reserved.</p>
+        </div>
+    </footer>
+</body>
+</html>
