--- a/index.html
+++ b/index.html
@@ -1,100 +1,156 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Josh Macaraig - Low Code Developer</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
-</head>
-<body class="bg-gray-100">
-    <nav class="bg-white shadow-lg">
-        <div class="max-w-6xl mx-auto px-4">
-            <div class="flex justify-between">
-                <div class="flex space-x-7">
-                    <div class="flex items-center py-4">
-                        <span class="font-semibold text-gray-500 text-lg">Josh Macaraig</span>
-                    </div>
-                </div>
-                <div class="flex items-center space-x-3">
-                    <a href="#" class="py-2 px-2 text-gray-500 hover:text-gray-900">Projects</a>
-                    <a href="#" class="py-2 px-2 text-gray-500 hover:text-gray-900">Skills</a>
-                    <a href="#" class="py-2 px-2 text-gray-500 hover:text-gray-900">Contact</a>
-                </div>
-            </div>
-        </div>
-    </nav>
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<title>Joshua Macaraig | Enterprise Solutions Developer</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="Certified enterprise developer specializing in no-code/low-code solutions, automation, and full-stack development" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
+		<div id="wrapper">
+			<nav id="nav">
+				<a href="#" class="icon solid fa-home"><span>Home</span></a>
+				<a href="#projects" class="icon solid fa-code"><span>Projects</span></a>
+				<a href="#services" class="icon solid fa-laptop"><span>Services</span></a>
+				<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
+			</nav>
 
-    <main class="max-w-6xl mx-auto px-4 py-8">
-        <!-- Hero Section -->
-        <section class="text-center py-20">
-            <h1 class="text-4xl font-bold text-gray-800 mb-4">Low-Code Developer & Solution Architect</h1>
-            <p class="text-xl text-gray-600">Specializing in Xano, Webflow, and No-Code Solutions</p>
-        </section>
+			<div id="main">
+				<!-- Home -->
+				<article id="home" class="panel intro">
+					<header>
+						<h1>Joshua Macaraig</h1>
+						<p class="tag">Enterprise Solutions Architect | Application Developer</p>
 
-        <!-- Skills Section -->
-        <section class="py-12">
-            <h2 class="text-3xl font-bold text-gray-800 mb-8">Skills</h2>
-            <div class="grid grid-cols-2 md:grid-cols-3 gap-6">
-                <div class="bg-white p-6 rounded-lg shadow-md">
-                    <h3 class="font-semibold mb-2">Xano</h3>
-                    <p class="text-gray-600">Backend Development & API Design</p>
-                </div>
-                <div class="bg-white p-6 rounded-lg shadow-md">
-                    <h3 class="font-semibold mb-2">Webflow</h3>
-                    <p class="text-gray-600">Frontend Development & CMS</p>
-                </div>
-                <div class="bg-white p-6 rounded-lg shadow-md">
-                    <h3 class="font-semibold mb-2">Weweb</h3>
-                    <p class="text-gray-600">Web Application Development</p>
-                </div>
-                <div class="bg-white p-6 rounded-lg shadow-md">
-                    <h3 class="font-semibold mb-2">Wized</h3>
-                    <p class="text-gray-600">Logic & Interactions</p>
-                </div>
-                <div class="bg-white p-6 rounded-lg shadow-md">
-                    <h3 class="font-semibold mb-2">Knack</h3>
-                    <p class="text-gray-600">Database Applications</p>
-                </div>
-                <div class="bg-white p-6 rounded-lg shadow-md">
-                    <h3 class="font-semibold mb-2">Make (Integromat)</h3>
-                    <p class="text-gray-600">Automation & Integration</p>
-                </div>
-            </div>
-        </section>
+						<p class="bio">Building scalable enterprise solutions with 4+ years of experience in full-stack and low-code development.</p>
+					</header>
+					<a href="#projects" class="jumplink pic">
+						<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
+						<img src="./images/profile.jpg" alt="Profile" />
+					</a>
+				</article>
 
-        <!-- Projects Section -->
-        <section class="py-12">
-            <h2 class="text-3xl font-bold text-gray-800 mb-8">Featured Projects</h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-                <!-- Add your project cards here -->
-                <div class="bg-white rounded-lg shadow-md overflow-hidden">
-                    <img src="/api/placeholder/600/400" alt="Project 1" class="w-full h-48 object-cover">
-                    <div class="p-6">
-                        <h3 class="font-bold text-xl mb-2">Project Title</h3>
-                        <p class="text-gray-600 mb-4">Description of the project and the technologies used.</p>
-                        <div class="flex gap-2">
-                            <span class="px-3 py-1 bg-gray-200 rounded-full text-sm">Xano</span>
-                            <span class="px-3 py-1 bg-gray-200 rounded-full text-sm">Webflow</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
+				<!-- Projects -->
+				<article id="projects" class="panel">
+					<header>
+						<h2>Featured Projects</h2>
+					</header>
+					<section>
+						<div class="row">
+							<div class="col-4 col-6-medium col-12-small">
+								<div class="project-card">
+									<img src="/api/placeholder/400/320" alt="Housing Solutions" class="image fit"/>
+									<h3>Housing Solutions Platform</h3>
+									<p>Webflow + Wized + Xano integration for managing property deals and applicants</p>
+									<div class="tech-stack">Webflow • Wized • Xano</div>
+								</div>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<div class="project-card">
+									<img src="/api/placeholder/400/320" alt="Trash Butler Suite" class="image fit"/>
+									<h3>Trash Butler Management Suite</h3>
+									<p>Area Command Center, Butler Hub with clock-in system, and Community Concierge portal</p>
+									<div class="tech-stack">Knack • Integromat • Tadabase</div>
+								</div>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<div class="project-card">
+									<img src="/api/placeholder/400/320" alt="Printing System" class="image fit"/>
+									<h3>Enterprise Printing System</h3>
+									<p>Multi-department system for Japanese manufacturing company</p>
+									<div class="tech-stack">Laravel • Vue.js • MySQL</div>
+								</div>
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+								<div class="project-card">
+									<img src="/api/placeholder/400/320" alt="Developer List" class="image fit"/>
+									<h3>Developer Directory</h3>
+									<p>Interactive platform for showcasing developer profiles and skills</p>
+									<div class="tech-stack">Vue.js • PHP • MySQL</div>
+								</div>
+							</div>
+						</div>
+					</section>
+					<div class="certifications">
+						<h3>Certifications</h3>
+						<div class="cert-badge">
+							<img src="/api/placeholder/100/100" alt="Salesforce Badge" />
+							<p>Certified Salesforce B2C Commerce Developer</p>
+						</div>
+					</div>
+				</article>
 
-        <!-- Contact Section -->
-        <section class="py-12">
-            <h2 class="text-3xl font-bold text-gray-800 mb-8">Contact</h2>
-            <div class="bg-white p-8 rounded-lg shadow-md">
-                <p class="text-gray-600 mb-4">Looking for a low-code developer? Let's connect!</p>
-                <a href="mailto:your@email.com" class="inline-block bg-blue-500 text-white px-6 py-3 rounded-lg hover:bg-blue-600">Get in Touch</a>
-            </div>
-        </section>
-    </main>
+				<!-- Services -->
+				<article id="services" class="panel">
+					<header>
+						<h2>Services</h2>
+					</header>
+					<div class="services-grid">
+						<div class="service-card">
+							<h3>Enterprise Solutions</h3>
+							<ul>
+								<li>Salesforce B2C Commerce Implementation</li>
+								<li>Custom Backend Architecture (Xano)</li>
+								<li>Frontend Development (Webflow/Vue.js)</li>
+							</ul>
+						</div>
+						<div class="service-card">
+							<h3>Business Automation</h3>
+							<ul>
+								<li>Workflow Automation (Make/Integromat)</li>
+								<li>Business Process Integration</li>
+								<li>Custom CRM Solutions</li>
+							</ul>
+						</div>
+					</div>
+				</article>
 
-    <footer class="bg-gray-800 text-white py-8">
-        <div class="max-w-6xl mx-auto px-4 text-center">
-            <p>&copy; 2024 Josh Macaraig. All rights reserved.</p>
-        </div>
-    </footer>
-</body>
+				<!-- Contact -->
+				<article id="contact" class="panel">
+					<header>
+						<h2>Let's Work Together</h2>
+					</header>
+					<form action="#" method="post">
+						<div class="row">
+							<div class="col-6 col-12-medium">
+								<input type="text" name="name" placeholder="Name" />
+							</div>
+							<div class="col-6 col-12-medium">
+								<input type="text" name="email" placeholder="Email" />
+							</div>
+							<div class="col-12">
+								<select name="service" class="form-select">
+									<option value="">Select Service</option>
+									<option value="xano">Xano Development</option>
+									<option value="webflow">Webflow Development</option>
+									<option value="automation">Business Automation</option>
+									<option value="invitation">Website Invitations</option>
+								</select>
+							</div>
+							<div class="col-12">
+								<textarea name="message" placeholder="Project Details" rows="6"></textarea>
+							</div>
+							<div class="col-12">
+								<input type="submit" value="Start Project" />
+							</div>
+						</div>
+					</form>
+				</article>
+			</div>
+
+			<div id="footer">
+				<ul class="copyright">
+					<li>&copy; Joshua Macaraig 2025</li>
+				</ul>
+			</div>
+		</div>
+
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/browser.min.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
+	</body>
 </html>
