--- a/index.html
+++ b/index.html
@@ -170,6 +170,12 @@
 				.skills-container:hover {
 				animation-play-state: paused;
 				}
+				.main-left{
+					width: 50%;
+				}
+				.project-card{
+					border: 1px solid rgb(236 43 43 / 10%);
+				}
 		</style>
 	</head>
 	<body class="is-preload">
@@ -184,7 +190,7 @@
 			<div id="main">
 				<!-- Home -->
 				<article id="home" class="panel intro">
-					<header style="width: 50%;">
+					<header class="main-left">
 						<h1>Joshua Macaraig</h1>
 						<p style="font-size: .85em;">Application Developer</p>
 						<p class="bio">Building scalable enterprise solutions with 4+ years of experience in full-stack and low-code development.</p>
